[Refactoring] 버그 수정, 리드미 수정, swag 수정
