# model/entitiy/menu.go
@@ -11,11 +11,11 @@ const (
 type Menu struct {
 	ID         primitive.ObjectID `bson:"_id"`
 	Name       string             `bson:"name,omitempty"`
-	State      int                `bson:"state,omitempty"`
-	Price      int                `bson:"price,omitempty"`
+	State      int                `bson:"state"`
+	Price      int                `bson:"price"`
 	Origin     string             `bson:"origin,omitempty"`
-	Score      float32            `bson:"score,omitempty"`
-	IsDeleted  bool               `bson:"is_deleted,omitempty"`
+	Score      float32            `bson:"score"`
+	IsDeleted  bool               `bson:"is_deleted"`
 	Category   string             `bson:"category,omitempty"`
 	BusinessID primitive.M        `bson:"business_id,omitempty"`
 }
